[gd_scene load_steps=3 format=3 uid="uid://cpe2gxy1qj316"]

[ext_resource type="Script" path="res://Enemies/Scripts/Warden/WardenAlertArea.gd" id="1_pmmd1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h3tin"]
radius = 1345.17

[node name="WardenAlertArea" type="Area2D"]
script = ExtResource("1_pmmd1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h3tin")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
